# test-medical-search

./: .dockerignore  .gitignore  Dockerfile  query.txt
.devcontainer/: devcontainer.json
app/: app.py  function_app.py  local.settings.json  pyproject.toml
app/ai/: processor.py
app/searchlib/: dynamed.py  pubmed.py  results.py  semantic_scholar.py
infra/: ai.tf  db.tf  function.tf  main.tf  resources.tf  variables.tf  versions.tf
pipeline/: main.yml  variables.yml
search/: README.md  function_app.py  pyproject.toml  search.py
search/search/: dynamed.py  pubmed.py  results.py  semantic_scholar.py
search/searchlib/: results.py
