[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jason Johnson <jasojohnson@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
xmltodict = "^0.13.0"
azure-functions = "^1.20.0"
pymongo = "^4.9.1"
pillow = "^11.0.0"
pymupdf = "^1.24.12"
openai = "^1.52.2"
azure-core = "^1.31.0"
azure-ai-documentintelligence = "^1.0.0b4"
azure-storage-blob = "^12.23.1"
azure-identity = "^1.19.0"
azure-functions-durable = "^1.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
