[tool.poetry]
name = "search"
version = "0.1.0"
description = ""
authors = ["Jason Johnson <jasojohnson@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"
xmltodict = "^0.13.0"
azure-functions = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
